# CVS-covid-vaccine-checker

./: .gitignore  .replit  README.md  cities.txt  environment.yaml  geoloc.py  init_builder.py  main.sh  pyproject.toml  requirements.txt  vaccine.py  vaccine2.py
powershell/: cvs_checker.ps1  readme.md
